syntax = "proto2";
package gorm;

option go_package = "github.com/TheSDTM/protoc-gen-gorm/options;gorm";

import "google/protobuf/descriptor.proto";
// TODO: The option number 52119 lies within the internally reserved extension
// range. I believe a publicly unique number should be requested.

// Currently no file options
extend google.protobuf.FileOptions {
  optional GormFileOptions file_opts = 52119;
}

message GormFileOptions {
}

// Validation rules applied at the message level
extend google.protobuf.MessageOptions {
    // ormable will cause orm code to be generated for this message/object
    optional GormMessageOptions opts = 52119;
}

message GormMessageOptions {
  required bool ormable = 1;
  repeated ExtraField include = 2;
  optional string table = 3;
}

message ExtraField {
  required string type = 1;
  required string name = 2;
  optional GormTag tag = 3;
  optional string package = 4;
}

// Field level specifications
extend google.protobuf.FieldOptions {
    optional GormFieldOptions field = 52119;
}

message GormFieldOptions {
    optional GormTag tag = 1;
    optional bool drop = 2;
    oneof association {
        HasOneOptions has_one = 3;
        BelongsToOptions belongs_to = 4;
        HasManyOptions has_many = 5;
        ManyToManyOptions many_to_many = 6;
    }
    optional string reference_of = 7;
}

message GormTag {
    optional string column = 1;
    optional string type = 2;
    optional int32 size = 3;
    optional int32 precision = 4;
    optional bool primary_key = 5;
    optional bool unique = 6;
    optional string default = 7;
    optional bool not_null = 8;
    optional bool auto_increment = 9;
    optional string index = 10;
    optional string unique_index = 11;
    optional bool embedded = 12;
    optional string embedded_prefix = 13;
    optional bool ignore = 14;
    optional string foreign_key = 15;
    optional string references = 16;
    optional string many_to_many = 17;
    optional string join_foreign_key = 18;
    optional string join_references = 19;
}

message HasOneOptions {
    optional string foreign_key = 1;
    optional GormTag foreign_key_tag = 2;
    optional string references = 3;
}

message BelongsToOptions {
    optional string foreign_key = 1;
    optional GormTag foreign_key_tag = 2;
    optional string references = 3;
}

message HasManyOptions {
    optional string foreign_key = 1;
    optional GormTag foreign_key_tag = 2;
    optional string references = 3;
}

message ManyToManyOptions {
    optional string jointable = 1;
    optional string foreign_key = 2;
    optional string join_foreign_key = 3;
    optional string references = 4;
    optional string join_references = 5;
}
